test/spec_vectors/simd_load_extend/fail/module_2.wat
(module (memory 0) (func (result v128) (v128.load8x8_u (f32.const 0))))